CSS: Solved add applicaiton location select dropdown too small on FireFox.

--- a/usage/jsgui/src/main/webapp/assets/css/prettybrook.css
+++ b/usage/jsgui/src/main/webapp/assets/css/prettybrook.css
@@ -781,7 +781,7 @@ div.for-empty-table {
 }
 
 #app-locations select {
-	height: 22px;
+	min-height: 22px;
 }
 #app-locations #selector-container {
 	margin-bottom: 4px;
